crates/rolldown/tests/rolldown/errors/assign_to_import/main.js
import { importedA, importedB as b } from "./foo"

importedA = 1;

b -= 1;
